--- a/lesson4/templates/gemini/index.html
+++ b/lesson4/templates/gemini/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Jack的網頁Title</title>
-  <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>網頁框架</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
