--- a/lesson4/static/css/index.css
+++ b/lesson4/static/css/index.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     line-height: 1.6;
     background-color: #f4f4f4; /* 淺灰色背景 */
-    color: #333;
+    color: #100459;
 }
 
 .container {
@@ -20,7 +20,7 @@ body {
 /* Header 樣式 */
 header {
     background-color: #ddd; /* 淺灰色背景 */
-    color: #333;
+    color: #863737;
     padding: 10px 0;
 }
 
@@ -43,14 +43,14 @@ header {
 
 .desktop-nav ul li a {
     text-decoration: none;
-    color: #333;
+    color: #0b5b30;
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
 
 .desktop-nav ul li a:hover {
-    background-color: #ccc; /* 稍微深一點的灰色 */
+    background-color: #256acb80; /* 稍微深一點的灰色 */
 }
 
 /* 手機導覽列樣式 */
@@ -59,8 +59,8 @@ header {
 }
 
 .menu-btn {
-    background-color: #444;
-    color: white;
+    background-color: #35380a;
+    color: rgb(176, 120, 120);
     padding: 10px 15px;
     border: none;
     border-radius: 5px;
@@ -106,7 +106,7 @@ footer {
         background-color: #ddd;
         width: 100%;
         text-align: center;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 8px rgb(5, 33, 41);
         z-index: 10;
     }
 
