--- a/lesson5/templates/classes.html.jinja2
+++ b/lesson5/templates/classes.html.jinja2
@@ -1,9 +1,10 @@
 {% extends "layout/base.html.jinja2" %}
 {%block title%}
-職能發展學院 首頁
+職能發展學院 課程規劃
 {%endblock%}
 
 {% block main %}
 <h1>{{self.title()}}</h1>
+
 {{super()}}
 {% endblock %}
