--- a/lesson6/static/css/index.css
+++ b/lesson6/static/css/index.css
@@ -7,16 +7,25 @@
   padding: 20px; /* 內邊距 */
 }
 
+
+
 /* 主要標題 */
 .event-main-title {
-  font-size: 2em; /* 標題字體大小 */
-  margin-bottom: 0.5em; /* 下邊距 */
+  font-size: 2em; /* 標題字體大小 */    
+  margin-bottom: 0.2em; /* 下邊距 */
   color: #333; /* 標題顏色 */
 }
+
+h2.event-main-title{
+  margin-top: 0em;
+}
+
+
 
 /* 副標題 */
 .event-subtitle {
   font-size: 1.2em; /* 副標題字體大小 */
+  margin-top:0.2em;
   margin-bottom: 1.5em; /* 下邊距 */
   color: #555; /* 副標題顏色 */
 }
