--- a/lesson6/templates/index.html.jinja2
+++ b/lesson6/templates/index.html.jinja2
@@ -27,22 +27,22 @@
 
   <div class="sports-grid-container">
     <article class="sport-card-item">
-      <img src="[https://via.placeholder.com/400x300?text=射箭圖片](https://via.placeholder.com/400x300?text=射箭圖片)" alt="射箭示意圖" class="sport-card-image">
+      <img src="{{url_for('static', filename='images/n1.png')}}" alt="射箭示意圖" class="sport-card-image">
       <div class="sport-card-name">射箭</div>
     </article>
 
     <article class="sport-card-item">
-      <img src="[https://via.placeholder.com/400x300?text=田徑圖片](https://via.placeholder.com/400x300?text=田徑圖片)" alt="田徑示意圖" class="sport-card-image">
+      <img src="{{url_for('static', filename='images/n2.png')}}" alt="田徑示意圖" class="sport-card-image">
       <div class="sport-card-name">田徑</div>
     </article>
 
     <article class="sport-card-item">
-      <img src="[https://via.placeholder.com/400x300?text=水上運動圖片](https://via.placeholder.com/400x300?text=水上運動圖片)" alt="水上運動示意圖" class="sport-card-image">
+      <img src="{{url_for('static', filename='images/n3.png')}}" alt="水上運動示意圖" class="sport-card-image">
       <div class="sport-card-name">水上運動</div>
     </article>
 
     <article class="sport-card-item">
-      <img src="[https://via.placeholder.com/400x300?text=羽球圖片](https://via.placeholder.com/400x300?text=羽球圖片)" alt="羽球示意圖" class="sport-card-image">
+      <img src="{{url_for('static', filename='images/n4.png')}}" alt="羽球示意圖" class="sport-card-image">
       <div class="sport-card-name">羽球</div>
     </article>
 
