--- a/lesson6/templates/index.html.jinja2
+++ b/lesson6/templates/index.html.jinja2
@@ -27,7 +27,7 @@
 
   <div class="sports-grid-container">
     <article class="sport-card-item">
-      <img src="{{url_for('static', filename='images/n1.png')}}" alt="射箭示意圖" class="sport-card-image">
+      <img src="{{url_for('static', filename='images/s1.png')}}" alt="射箭示意圖" class="sport-card-image">
       <div class="sport-card-name">射箭</div>
     </article>
 
