--- a/lesson9/static/css/base.css
+++ b/lesson9/static/css/base.css
@@ -16,7 +16,7 @@ body {
 
 /* 頁首 Header */
 .site-header {
-    background-color: #AFD1E2; /* 根據圖片的淺灰色背景 */
+    background-color: #ffa63a; /* 根據圖片的淺灰色背景 */
     padding: 15px 0;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
@@ -85,7 +85,7 @@ main h1 {
 
 /* 頁尾 Footer */
 footer {
-    background-color: #AFD1E2; /* 根據圖片調整的淺藍色，您可以修改 */
+    background-color: #ffa63a; /* 根據圖片調整的淺藍色，您可以修改 */
     color: #333; /* 文字顏色，根據圖片內容調整 */
     padding: 30px 50px 10px 50px;
     font-size: 14px;
