--- a/lesson10/templates/classes.html.jinja2
+++ b/lesson10/templates/classes.html.jinja2
@@ -27,7 +27,7 @@
       <div class="author-block">
         <div class="avatar">
           <span>F</span>
-          <!-- <img src="Card_Grid_Icon.png" alt="陳小明 頭像"> -->
+          <!-- <img src="Card_Grid_Icon.png" alt=""> -->
         </div>
         <div class="author-info">
           <div class="author-title">{{course[1]}}</div>
