--- a/finished/static/css/classes.css
+++ b/finished/static/css/classes.css
@@ -227,4 +227,8 @@ body {
     .author-description {
         font-size: 14px;
     }
+        .pagination {Add commentMore actions
+        flex-wrap: wrap; /* 允許換行 */
+        row-gap: 8px;    /* 換行後的垂直間距 */
+    }
 }
