--- a/finished/templates/traffic.html.jinja2
+++ b/finished/templates/traffic.html.jinja2
@@ -565,6 +565,8 @@
                 <div id="bus-eta" class="detail-content">預估到站時間：<span class="value">--</span> 分鐘</div>
             </div>
         </div>
+        <!-- 重新查詢按鈕 -->
+        <button id="reload-btn">重新查詢</button>
         <!-- 手動預測功能區塊 -->
         <div class="card manual-predictor">
             <button class="predictor-toggle" id="predictor-toggle">
@@ -595,10 +597,10 @@
                 <li>市民小巴 11：費用成本 7~15元，搭乘時間約 20~30分鐘</li>
                 <li>計程車：費用約 120~140元左右，搭乘時間約 8~10 分鐘</li>
             </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1465.055036794738!2d121.5368245482722!3d25.115345486396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442ac2a6d916fbb%3A0xf3c18549d04f207d!2z6Ie65YyX5biC6IG36IO955m85bGV5a246Zmi!5e0!3m2!1szh-TW!2stw!4v1750149074972!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <!-- 重新查詢按鈕 -->
-        <button id="reload-btn">重新查詢</button>
+        
     </div>
 
     <script>
