--- a/finished/templates/traffic.html.jinja2
+++ b/finished/templates/traffic.html.jinja2
@@ -516,7 +516,7 @@
     <div class="container" id="main-container">
         <!-- 頁首 -->
         <div class="header">
-            <h1>芝山站至職能發展學院<br>交通決策建議系統</h1>
+            <h1>芝山站至職能發展學院<br>交通建議參考方式</h1>
             <div class="menu-btn" title="選單"><i class="fa-solid fa-bars"></i></div>
         </div>
 
